--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="pages/page.html">go to pages</a>
         <a href="http://google.com" target="_blank">go to google</a>
 
-    
+    lorem  
     </div>
 
 </body>
