--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>The Cavalier King Charles Spaniel wears his connection to British history in his breed's name.</h1>
+        <h1 style="color: blueviolet;">The Cavalier King Charles Spaniel wears his connection to British history in his breed's name.</h1>
         
     <img src="images/fotolia.jpg" alt="fotolia" width="300" height="200">
 
