--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div>
         <h1 style="color: blueviolet;">The Cavalier King Charles Spaniel wears his connection to British history in his breed's name.</h1>
+        <p>beautyfuul breed</p>
         
     <img src="images/fotolia.jpg" alt="fotolia" width="300" height="200">
 
