new color of color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </div>
     <div>
-        <h2>color</h2>
+        <h2 style="color: beige;">color</h2>
         <span>blenheim</span>
         <span>rubin</span>
         <span>tricolor</span>
