--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <span>rubin</span>
         <span>tricolor</span>
         <span>black</span>
+        <p>more information on next page</p>
     </div>
     
     <div>
