--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     <div>
         <h1 style="color: blueviolet;">The Cavalier King Charles Spaniel wears his connection to British history in his breed's name.</h1>
         <p>beautyfuul breed</p>
+        <p>cavaler king charles spaniel</p>
         
     <img src="images/fotolia.jpg" alt="fotolia" width="300" height="200">
 
         </div>
     <div>
-        <h2 style="color: beige;">color</h2>
+        <h2 style="background-color: blueviolet;">color</h2>
         <span>blenheim</span>
         <span>rubin</span>
         <span>tricolor</span>
         <span>black</span>
-        <p>more information on next page</p>
+        <p>more information on next pageg</p>
     </div>
     
     <div>
