--- a/table.html
+++ b/table.html
@@ -24,7 +24,7 @@
         tfoot
         caption
     -->
-    <table style="width: 1200; height: 1000;" >
+    <table style="width: 1200px; height: 1000px;" >
     <tbody>
         <tr>
             <td>1</td>
