--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="pages/more.html">more information</a>
         <a href="pages/page.html">go to pages</a>
         <a href="http://google.com" target="_blank">go to google</a>
+        <a href="table.html">go to table</a>
 
     lorem  
     </div>
