--- a/table.html
+++ b/table.html
@@ -28,15 +28,15 @@
     <tbody>
         <tr>
             <td colspan="2" style="background-color: gray;">1</td>
+            <td style="background-color: darkolivegreen;">2</td>
             <td style="background-color: darkolivegreen;">3</td>
             <td style="background-color: darkolivegreen;">4</td>
-            <td style="background-color: darkolivegreen;">5</td>
-            <td rowspan="3" style="background-color: rgb(69, 139, 46);">6</td>
+            <td rowspan="3" style="background-color: rgb(69, 139, 46);">5</td>
         </tr>
         <tr>
             <td rowspan="2" style="background-color: green;">1</td>
-            <td style="background-color: darkolivegreen;">2</td>
-            <td rowspan="2" colspan="3" style="background-color: darkgoldenrod;">3</td>
+            <td style="background-color: darkolivegreen;">3</td>
+            <td rowspan="2" colspan="3" style="background-color: darkgoldenrod;">4</td>
         </tr>
         <tr>
             <td style="background-color: darkolivegreen;">1</td>
@@ -50,6 +50,7 @@
         <tr>
             <td colspan="2" style="background-color: gray;">3</td>
         </tr>
+        <a href="../index.html">go to home</a> 
     </tbody>
     </table>
 </body>
