--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cavaler king charles spaniel</title>
-    <link rel="stylessheet" href="css/styles.css"
-</head>
+    <link rel="stylessheet" href="css/styles.css">
+    </head>
 <body>
     <div>
         <h1 style="color: blueviolet;">The Cavalier King Charles Spaniel wears his connection to British history in his breed's name.</h1>
