--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cavaler king charles spaniel</title>
-    <link rel="stylessheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     </head>
 <body>
     <div>
@@ -29,7 +29,7 @@
         <a href="pages/more.html">more information</a>
         <a href="pages/page.html">go to pages</a>
         <a href="http://google.com" target="_blank">go to google</a>
-        <a href="table.html">go to table</a>
+        <a href="pages/table.html">go to table</a>
 
     lorem  
     </div>
