--- a/pages/table.html
+++ b/pages/table.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>table</title>
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
         table, tr, td {
             border-collapse: separate;
@@ -24,7 +25,7 @@
         tfoot
         caption
     -->
-    <table style="width: 600px; height: 500px;" >
+    <table class="table" >
     <tbody>
         <tr>
             <td colspan="2" style="background-color: gray;">1</td>
