--- a/pages/table.html
+++ b/pages/table.html
@@ -25,31 +25,31 @@
         tfoot
         caption
     -->
-    <table class="table" >
+    <table class="table">
     <tbody>
         <tr>
-            <td colspan="2" style="background-color: gray;">1</td>
-            <td style="background-color: darkolivegreen;">2</td>
-            <td style="background-color: darkolivegreen;">3</td>
-            <td style="background-color: darkolivegreen;">4</td>
-            <td rowspan="3" style="background-color: rgb(69, 139, 46);">5</td>
+            <td colspan="2" class="bg-grey";>1</td>
+            <td class="bg-bolotgreen">2</td>
+            <td class="bg-bolotgreen">3</td>
+            <td class="bg-bolotgreen">4</td>
+            <td rowspan="3" class="bg-greenligt">5</td>
         </tr>
         <tr>
-            <td rowspan="2" style="background-color: green;">1</td>
-            <td style="background-color: darkolivegreen;">3</td>
-            <td rowspan="2" colspan="3" style="background-color: darkgoldenrod;">4</td>
+            <td rowspan="2" class="bg-green">1</td>
+            <td class="bg-bolotgreen">3</td>
+            <td rowspan="2" colspan="3" class="bg-yellow">4</td>
         </tr>
         <tr>
-            <td style="background-color: darkolivegreen;">1</td>
+            <td class="bg-bolotgreen">1</td>
         </tr>
         <tr>
-            <td rowspan="2" colspan="3" style="background-color: blue;">1</td>
-            <td style="background-color: darkolivegreen;">3</td>
-            <td style="background-color: darkolivegreen;">4</td>
-            <td rowspan="2" style="background-color: green;">5</td>
+            <td rowspan="2" colspan="3" class="bg-blue">1</td>
+            <td class="bg-bolotgreen">3</td>
+            <td class="bg-bolotgreen">4</td>
+            <td rowspan="2" class="bg-green">5</td>
         </tr>
         <tr>
-            <td colspan="2" style="background-color: gray;">3</td>
+            <td colspan="2" class="bg-grey">3</td>
         </tr>
         <a href="../index.html">go to home</a> 
     </tbody>
