--- a/pages/blok.html
+++ b/pages/blok.html
@@ -28,11 +28,13 @@
             <div class="thirtconteiner9">9</div>
         <div>
             <div class="thirtconteiner10">10</div>
-        </div>
-        <div>
-            <div class="thirtconteiner11">11</div>
-            <div class="thirtconteiner12">12</div>
-            <div class="thirtconteiner13">13</div>
+            <div class="thirtconteiner11-one">
+                <div class="thirtconteiner11">11</div>
+                <div class="thirtconteiner11">
+                    <div class="thirtconteiner12">12</div>
+                    <div class="thirtconteiner12">13</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
