--- a/pages/blok.html
+++ b/pages/blok.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <h2 class="title-hidden">inline blok</h2>
+    <h2 class="title-hidden">inline flex</h2>
     <div class="firstconteiner">
         <div>1</div>
         <div>2</div>
